fix: resolve product image bottom spacing bug above breakpoint

--- a/product-preview-card-component-main/style.css
+++ b/product-preview-card-component-main/style.css
@@ -198,7 +198,12 @@ background-image: url(./images/icon-cart.svg);
 	}
 }
 
-
+.product__image img {
+	display: block;
+	width: 100%;
+	height: 100%;
+	object-fit: cover;
+}
 
 .product__content {
 	padding: var(--content-padding);
